mule-user-guide/v/3.2/connecting-using-transports.adoc
= Connecting Using Transports

link:https://docs.mulesoft.com/mule-user-guide/v/3.2/transports-reference[Available Transports]

A transport is responsible for carrying messages from application to application in the Mule ESB framework. In EIP terms, transports are used to implement message channels and provide connectivity to an underlying data source or message channel in a consistent way. For example, the link:https://docs.mulesoft.com/mule-user-guide/v/3.2/http-transport-reference[HTTP transport] handles messages sent via the HTTP protocol, whereas the link:https://docs.mulesoft.com/mule-user-guide/v/3.2/file-transport-reference[File transport] reads and writes files placed on the server's file system.

A transport also provides a set of functionality that handles the messages on a specific channel. This includes specific transformers like the `<body-to-parameter-map-transformer>` in the HTTP transport and other specific elements like the various filename parsers for the File transport.

The heart of a transport is the _connector_. The connector maintains the configuration and state for the transport. When receiving messages, a connector uses a _message receiver_, which reads the data, packages it as a message, and passes it to the first message processor in a flow or the service component's inbound router. When sending messages, the connector uses a _message dispatcher_, which receives the messages and routing instructions from the previous Message Processor in a flow or a service component's outbound router and sends the message to the next endpoint or external service.

Transports are configured via endpoints in Mule. See link:https://docs.mulesoft.com/mule-user-guide/v/3.2/configuring-endpoints[Configuring Endpoints] for an explanation on how this is done.

A list of available transports and the reference topic including example configuration for each specific transport bundled with Mule can be found in the link:https://docs.mulesoft.com/mule-user-guide/v/3.2/transports-reference[Transport Configuration Reference].

image:transports.png[transports]
