mule-user-guide/v/3.8/connecting-using-transports.adoc
= Connecting Using Transports
:keywords: anypoint, studio, on premises, on premise, connectors, transports

A transport is responsible for carrying messages from application to application in the Mule Runtime framework. In EIP terms, transports are used to implement message channels and provide connectivity to an underlying data source or message channel in a consistent way. For example, the link:/mule-user-guide/v/3.8/tcp-transport-reference[TCP transport] handles messages sent via the TCP protocol, whereas the link:/mule-user-guide/v/3.8/file-transport-reference[File transport] reads and writes files placed on the server's file system.

A transport also provides a set of functionality that handles the messages on a specific channel. This includes specific transformers like the `<body-to-parameter-map-transformer>` in the HTTP transport and other specific elements like the various filename parsers for the File transport.

The heart of a transport is the _connector_. The connector maintains the configuration and state for the transport. When receiving messages, a connector uses a _message receiver_, which reads the data, packages it as a message, and passes it to the first message processor in a flow. When sending messages, the connector uses a _message dispatcher_, which receives the messages and routing instructions from the previous Message Processor in a flow and sends the message to the next endpoint or external service.

Transports are configured via endpoints in Mule. See link:/mule-user-guide/v/3.8/endpoint-configuration-reference[Endpoint Configuration Reference] for an explanation on how this is done.

A list of available transports and the reference topic including example configuration for each specific transport bundled with Mule can be found in the link:/mule-user-guide/v/3.8/transports-reference[Transport Configuration Reference].

image:transports.png[transports]

== See Also

* link:/mule-user-guide/v/3.8/transports-reference[Available Transports]
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
